Fixed vertical-align of thumbtack to stay aligned with the recent changes to tile text vertical-align

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -145,7 +145,7 @@
 .tm-fa-thumbtack-tile {
 	width: 1em;
 	height: 1em;
-	vertical-align: -.3em;
+	vertical-align: -.15em;
 }
 
 .tm-fa-thumbtack-group {
